test/spec_vectors/align/ok/module_22.wat
(module (memory 0) (func (f64.store align=8 (i32.const 0) (f64.const 1.0))))